# CVCBoxArts

./: .gitignore  CVCBoxArts.spec  LICENSE  README.md  ViiCovers.spec  build.sh  main.spec  pyproject.toml
.github/workflows/: main.yml
app/: main.py
