[tool.poetry]
name = "cvcboxarts"
version = "0.1.0"
description = ""
authors = ["poliakustyczny <poliakustyczny@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
Pillow = "^10.1.0"
freesimplegui = "^5.2.0.post1"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
isort = "^5.12.0"
pytest = "^7.4.2"
pyinstaller = "^6.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
